@@ -31,9 +31,9 @@ BoosterGrip::BoosterGrip(Jack jack, const Event& event, const System& system)
     myDownEvent    = Event::JoystickZeroDown;
     myLeftEvent    = Event::JoystickZeroLeft;
     myRightEvent   = Event::JoystickZeroRight;
-    myFireEvent    = Event::JoystickZeroFire1;
-    myTriggerEvent = Event::JoystickZeroFire2;
-    myBoosterEvent = Event::JoystickZeroFire3;
+    myFireEvent    = Event::JoystickZeroFire;
+    myTriggerEvent = Event::JoystickZeroFire5;
+    myBoosterEvent = Event::JoystickZeroFire9;
     myXAxisValue   = Event::SALeftAxis0Value;
     myYAxisValue   = Event::SALeftAxis1Value;
   }
@@ -43,9 +43,9 @@ BoosterGrip::BoosterGrip(Jack jack, const Event& event, const System& system)
     myDownEvent    = Event::JoystickOneDown;
     myLeftEvent    = Event::JoystickOneLeft;
     myRightEvent   = Event::JoystickOneRight;
-    myFireEvent    = Event::JoystickOneFire1;
-    myTriggerEvent = Event::JoystickOneFire2;
-    myBoosterEvent = Event::JoystickOneFire3;
+    myFireEvent    = Event::JoystickOneFire;
+    myTriggerEvent = Event::JoystickOneFire5;
+    myBoosterEvent = Event::JoystickOneFire9;
     myXAxisValue   = Event::SARightAxis0Value;
     myYAxisValue   = Event::SARightAxis1Value;
   }
@@ -68,9 +68,9 @@ void BoosterGrip::update()
 
   // The CBS Booster-grip has two more buttons on it.  These buttons are
   // connected to the inputs usually used by paddles.
-  myAnalogPinValue[Five] = (myEvent.get(myBoosterEvent) != 0) ? 
+  myAnalogPinValue[Five] = (myEvent.get(myTriggerEvent) != 0) ? 
                             minimumResistance : maximumResistance;
-  myAnalogPinValue[Nine] = (myEvent.get(myTriggerEvent) != 0) ? 
+  myAnalogPinValue[Nine] = (myEvent.get(myBoosterEvent) != 0) ? 
                             minimumResistance : maximumResistance;
 
   // Axis events (usually generated by the Stelladaptor)
@@ -121,9 +121,10 @@ void BoosterGrip::update()
       }
     }
     // Get mouse button state
-    if(myEvent.get(Event::MouseButtonLeftValue) ||
-       myEvent.get(Event::MouseButtonRightValue))
+    if(myEvent.get(Event::MouseButtonLeftValue))
       myDigitalPinState[Six] = false;
+    if(myEvent.get(Event::MouseButtonRightValue))
+      myAnalogPinValue[Nine] = minimumResistance;
   }
 }
 
